<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.weili.boot</groupId>
        <artifactId>weili-boot-parent</artifactId>
        <version>1.0.0-iam-SNAPSHOT</version>
    </parent>

    <groupId>com.weili.iot-portal</groupId>
    <artifactId>weili-iot-portal</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <modules>
        <module>iot-portal-starter</module>
        <module>iot-portal-domain</module>
        <module>iot-portal-dal</module>
        <module>iot-portal-common</module>
        <module>iot-portal-service</module>
        <module>iot-portal-web</module>
        <module>iot-portal-task</module>
    </modules>

    <properties>
        <revision>1.0.0-SNAPSHOT</revision>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <weili-basic.version>1.0.0-iam-SNAPSHOT</weili-basic.version>
        <spring-maven-plugin.version>3.4.5</spring-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!--内部模块依赖-->
            <dependency>
                <groupId>com.weili.iot-portal</groupId>
                <artifactId>iot-portal-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.weili.iot-portal</groupId>
                <artifactId>iot-portal-dal</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.weili.iot-portal</groupId>
                <artifactId>iot-portal-web</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.weili.iot-portal</groupId>
                <artifactId>iot-portal-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.weili.iot-portal</groupId>
                <artifactId>iot-portal-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.weili.iot-portal</groupId>
                <artifactId>iot-portal-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.weili.iot-portal</groupId>
                <artifactId>iot-portal-task</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!--依赖模块:按需引入-->
            <dependency>
                <groupId>com.weili.basic</groupId>
                <artifactId>weili-basic-common</artifactId>
                <version>${weili-basic.version}</version>
            </dependency>
            <dependency>
                <groupId>com.weili.basic</groupId>
                <artifactId>weili-basic-framework</artifactId>
                <version>${weili-basic.version}</version>
            </dependency>
            <dependency>
                <groupId>com.weili.basic</groupId>
                <artifactId>weili-basic-redis</artifactId>
                <version>${weili-basic.version}</version>
            </dependency>
            <dependency>
                <groupId>com.weili.basic</groupId>
                <artifactId>weili-basic-xxljob</artifactId>
                <version>${weili-basic.version}</version>
            </dependency>
            <dependency>
                <groupId>com.weili.basic</groupId>
                <artifactId>weili-basic-apollo</artifactId>
                <version>${weili-basic.version}</version>
            </dependency>
            <dependency>
                <groupId>com.weili.basic</groupId>
                <artifactId>weili-basic-oauth2</artifactId>
                <version>${weili-basic.version}</version>
            </dependency>
            <!--三方模块-->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-maven-plugin.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${org.mapstruct.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok-mapstruct-binding</artifactId>
                            <version>${lombok-mapstruct-binding.version}</version>
                        </path>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-archetype-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <propertyFile>archetype.properties</propertyFile>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>nexus-release</id>
            <name>nexus-release</name>
            <url>http://100.100.5.2:9999/repository/maven-releases</url>
        </repository>
        <snapshotRepository>
            <id>nexus-snapshots</id>
            <name>nexus-snapshots</name>
            <url>http://100.100.5.2:9999/repository/maven-snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>